@@ -4,7 +4,9 @@ Ronnjs Changes and Release Notes
 Version 0.3.6
 ------------------------------
 
-* Minor changes the README
+* Minor changes in the README
+* Operate over stdio by default, leaving 'file' as a non-required argument.
+  (Thanks to TJ Holowaychuk)
 
 
 Version 0.3.5
